--- a/dich_vu.html
+++ b/dich_vu.html
@@ -497,7 +497,57 @@
 			</div>
 		</div>
 
+		<div class="section-salient-features">
+			<div class="container">
+				<div class="content">
+					<div class="slogan-section text-left">
+						Tính năng nổi bật
+					</div>
+					<div class="title-section text-left">
+						CLOUD365 - CLOUD VPS GIÁ RẺ NHÂN HÒA
+					</div>
 
+					<div class="info">
+						<div class="info-tab">
+							<div class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
+							    <a class="nav-link active" id="cnyt-tab" data-toggle="pill" href="#cnyt">
+							    	Công nghệ uy tín
+							    </a>
+							    <a class="nav-link" id="tuvtdl-tab" data-toggle="pill" href="#tuvtdl" >
+							    	Multi Region – Tối ưu vị trí địa lý
+							    </a>
+							    <a class="nav-link" id="atbm-tab" data-toggle="pill" href="#atbm" >
+							    	An toàn & bảo mật
+							    </a>
+							    <a class="nav-link" id="tssc-tab" data-toggle="pill" href="#tssc">
+							    	Tính sẵn sàng cao
+							    </a>
+							    <a class="nav-link" id="tlhc-tab" data-toggle="pill" href="#tlhc">
+							    	Tính linh hoạt cao
+							    </a>
+							</div>
+							<div class="tab-content">
+							    <div class="tab-pane fade show active" id="cnyt" role="tabpanel" aria-labelledby="cnyt-tab">
+							    	<div class="img">
+							    		<img src="" alt="">
+							    	</div>
+							    	<div class="name">
+							    		Công nghệ uy tín
+							    	</div>
+							    	<div class="dsc">
+							    		Hạ tầng máy chủ CLOUD365 của Nhân Hòa đặt tại hầu hết các trung tâm dữ liệu hàng đầu tại Việt Nam như Viettel, FPT, CMC... cho phép khách hàng lựa chọn nơi đặt máy chủ Cloud VPS/ Cloud Server đáp ứng được yêu cầu của doanh nghiệp, qua đó tối ưu việc truyền tải dữ liệu và hiệu suất của máy chủ.
+							    	</div>
+							    </div>
+							    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
+							    <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
+							    <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- khach_hang_noi_ve_dich_vu_nhan_hoa -->
 		<div class="section-what-customers-about">
 			<div class="container">
