--- a/dich_vu.html
+++ b/dich_vu.html
@@ -91,7 +91,7 @@
 						        	SSD CLOUD SEVER
 						        </a>
 						    </li>
-						    <li class="nav-item">
+						    <li class="nav-item active">
 						        <a class="nav-link active" href="#ram">
 						        	SSD CLOUD HIGH RAM
 						        </a>
@@ -813,7 +813,7 @@
 						      			</div>
 						      			<div class="info-name-img">
 						      				<div class="img">
-						      					<img src="image/home/khach_hang.jpg">
+						      					<img src="image/df.jpeg">
 						      				</div>
 						      				<div class="name-job">
 						      					<div class="name">
@@ -836,7 +836,7 @@
 						      			</div>
 						      			<div class="info-name-img">
 						      				<div class="img">
-						      					<img src="image/home/khach_hang.jpg">
+						      					<img src="image/dfsa.jpg">
 						      				</div>
 						      				<div class="name-job">
 						      					<div class="name">
@@ -859,7 +859,7 @@
 						      			</div>
 						      			<div class="info-name-img">
 						      				<div class="img">
-						      					<img src="image/home/khach_hang.jpg">
+						      					<img src="image/kh.jpg">
 						      				</div>
 						      				<div class="name-job">
 						      					<div class="name">
