--- a/chi_tiet_tuyen_dung.html
+++ b/chi_tiet_tuyen_dung.html
@@ -202,6 +202,196 @@
 										</ul>
 									</div>
 								</div>
+								<div class="text-content-recruitment">
+									<div class="title-recruitment">
+										Chi tiết tin tuyển dụng
+									</div>
+
+									<div class="content">
+										<h2>
+											Mô tả công việc
+										</h2>
+										<p>
+											1. Duy trì những mối quan hệ kinh doanh hiện có, nhận đơn đặt hàng, tiếp nhận thông tin khách hàng mới từ bộ phận Marketing, thiết lập những mối quan hệ kinh doanh mới bằng việc lập kế hoạch bán hàng.
+										</p>
+										<h2>
+											Mô tả công việc
+										</h2>
+										<p>
+											1. Duy trì những mối quan hệ kinh doanh hiện có, nhận đơn đặt hàng, tiếp nhận thông tin khách hàng mới từ bộ phận Marketing, thiết lập những mối quan hệ kinh doanh mới bằng việc lập kế hoạch bán hàng.
+										</p>
+										<h2>
+											Mô tả công việc
+										</h2>
+										<p>
+											1. Duy trì những mối quan hệ kinh doanh hiện có, nhận đơn đặt hàng, tiếp nhận thông tin khách hàng mới từ bộ phận Marketing, thiết lập những mối quan hệ kinh doanh mới bằng việc lập kế hoạch bán hàng.
+										</p>
+									</div>
+								</div>
+
+								<div class="form-recruitment">
+									<div class="title-recruitment">
+										Ứng tuyển vị trí: Nhân viên Kinh doanh - Hà Nội
+									</div>
+									<div class="content">
+										<form>
+										    <div class="form-group">
+										        <label for="exampleInputEmail1">Email address</label>
+										        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" />
+										        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+										    </div>
+										    <div class="form-group">
+										        <label for="exampleInputPassword1">Password</label>
+										        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
+										    </div>
+										    <div class="form-check">
+										        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+										        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+										    </div>
+										    <button type="submit" class="btn btn-primary">Submit</button>
+										</form>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-lg-3 col-md-4 col-12">
+							<div class="section-ttc">
+								<div class="title-recruitment">
+									Thông tin chung
+								</div>
+								<div class="content">
+									<div class="item">
+										<div class="icon">
+											<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M8.89366 18.6667H5.33366C3.86699 18.6667 2.66699 19.8667 2.66699 21.3333V28C2.66699 28.7333 3.26699 29.3333 4.00033 29.3333H8.89366C9.62699 29.3333 10.227 28.7333 10.227 28V20C10.227 19.2667 9.62699 18.6667 8.89366 18.6667Z" fill="white"/>
+												<path d="M17.7735 13.3333H14.2135C12.7469 13.3333 11.5469 14.5333 11.5469 16V28C11.5469 28.7333 12.1469 29.3333 12.8802 29.3333H19.1069C19.8402 29.3333 20.4402 28.7333 20.4402 28V16C20.4402 14.5333 19.2535 13.3333 17.7735 13.3333Z" fill="white"/>
+												<path d="M26.6668 22.6667H23.1068C22.3734 22.6667 21.7734 23.2667 21.7734 24V28C21.7734 28.7333 22.3734 29.3333 23.1068 29.3333H28.0001C28.7334 29.3333 29.3334 28.7333 29.3334 28V25.3333C29.3334 23.8667 28.1334 22.6667 26.6668 22.6667Z" fill="white"/>
+												<path d="M20.0136 6.46667C20.4269 6.05334 20.5869 5.56 20.4536 5.13334C20.3202 4.70667 19.9069 4.4 19.3202 4.30667L18.0402 4.09334C17.9869 4.09334 17.8669 4 17.8402 3.94667L17.1336 2.53334C16.6002 1.45334 15.3869 1.45334 14.8536 2.53334L14.1469 3.94667C14.1336 4 14.0136 4.09334 13.9602 4.09334L12.6802 4.30667C12.0936 4.4 11.6936 4.70667 11.5469 5.13334C11.4136 5.56 11.5736 6.05334 11.9869 6.46667L12.9736 7.46667C13.0269 7.50667 13.0669 7.66667 13.0536 7.72L12.7736 8.94667C12.5602 9.86667 12.9069 10.28 13.1336 10.44C13.3602 10.6 13.8536 10.8133 14.6669 10.3333L15.8669 9.62667C15.9202 9.58667 16.0936 9.58667 16.1469 9.62667L17.3336 10.3333C17.7069 10.56 18.0136 10.6267 18.2536 10.6267C18.5336 10.6267 18.7336 10.52 18.8536 10.44C19.0802 10.28 19.4269 9.86667 19.2136 8.94667L18.9336 7.72C18.9202 7.65334 18.9602 7.50667 19.0136 7.46667L20.0136 6.46667Z" fill="white"/>
+											</svg>
+										</div>
+										<div class="inter-content">
+											<div class="dsc">
+												Cấp bậc
+											</div>
+											<div class="name font-weight-bold">
+												Nhân viên
+											</div>
+										</div>
+									</div>
+									<div class="item">
+										<div class="icon">
+											<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M23.1863 20.8933L17.7996 16H14.1863L8.79965 20.8933C7.29298 22.2533 6.79965 24.3467 7.53298 26.24C8.26631 28.12 10.053 29.3333 12.0663 29.3333H19.9196C21.9463 29.3333 23.7196 28.12 24.453 26.24C25.1863 24.3467 24.693 22.2533 23.1863 20.8933ZM18.4263 24.1867H13.573C13.0663 24.1867 12.6663 23.7733 12.6663 23.28C12.6663 22.7867 13.0796 22.3733 13.573 22.3733H18.4263C18.933 22.3733 19.333 22.7867 19.333 23.28C19.333 23.7733 18.9196 24.1867 18.4263 24.1867Z" fill="white"/>
+												<path d="M24.4662 5.76001C23.7329 3.88001 21.9462 2.66667 19.9329 2.66667H12.0662C10.0529 2.66667 8.26623 3.88001 7.5329 5.76001C6.8129 7.65334 7.30623 9.74667 8.8129 11.1067L14.1996 16H17.8129L23.1996 11.1067C24.6929 9.74667 25.1862 7.65334 24.4662 5.76001ZM18.4262 9.64H13.5729C13.0662 9.64 12.6662 9.22667 12.6662 8.73334C12.6662 8.24001 13.0796 7.82667 13.5729 7.82667H18.4262C18.9329 7.82667 19.3329 8.24001 19.3329 8.73334C19.3329 9.22667 18.9196 9.64 18.4262 9.64Z" fill="white"/>
+												</svg>
+
+										</div>
+										<div class="inter-content">
+											<div class="dsc">
+												Kinh nghiệm
+											</div>
+											<div class="name font-weight-bold">
+												Không yêu cầu kinh nghiệm
+											</div>
+										</div>
+									</div>
+									<div class="item">
+										<div class="icon">
+											<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M23.3734 10.36C23.2801 10.3467 23.1867 10.3467 23.0934 10.36C21.0267 10.2933 19.3867 8.6 19.3867 6.52C19.3867 4.4 21.1067 2.66667 23.2401 2.66667C25.3601 2.66667 27.0934 4.38667 27.0934 6.52C27.0801 8.6 25.4401 10.2933 23.3734 10.36Z" fill="white"/>
+												<path d="M27.7205 19.6C26.2271 20.6 24.1338 20.9733 22.2005 20.72C22.7071 19.6267 22.9738 18.4133 22.9871 17.1333C22.9871 15.8 22.6938 14.5333 22.1338 13.4267C24.1071 13.16 26.2005 13.5333 27.7071 14.5333C29.8138 15.92 29.8138 18.2 27.7205 19.6Z" fill="white"/>
+												<path d="M8.58655 10.36C8.67988 10.3467 8.77322 10.3467 8.86655 10.36C10.9332 10.2933 12.5732 8.6 12.5732 6.52C12.5732 4.38667 10.8532 2.66667 8.71988 2.66667C6.59988 2.66667 4.87988 4.38667 4.87988 6.52C4.87988 8.6 6.51988 10.2933 8.58655 10.36Z" fill="white"/>
+												<path d="M8.73349 17.1333C8.73349 18.4267 9.01349 19.6533 9.52016 20.76C7.64016 20.96 5.68016 20.56 4.24016 19.6133C2.13349 18.2133 2.13349 15.9333 4.24016 14.5333C5.66682 13.5733 7.68016 13.1867 9.57349 13.4C9.02682 14.52 8.73349 15.7867 8.73349 17.1333Z" fill="white"/>
+												<path d="M16.1604 21.16C16.0537 21.1467 15.9337 21.1467 15.8137 21.16C13.3604 21.08 11.4004 19.0667 11.4004 16.5867C11.4137 14.0533 13.4537 12 16.0004 12C18.5337 12 20.5871 14.0533 20.5871 16.5867C20.5737 19.0667 18.6271 21.08 16.1604 21.16Z" fill="white"/>
+												<path d="M11.8264 23.92C9.81307 25.2667 9.81307 27.48 11.8264 28.8133C14.1197 30.3467 17.8797 30.3467 20.1731 28.8133C22.1864 27.4667 22.1864 25.2533 20.1731 23.92C17.8931 22.3867 14.1331 22.3867 11.8264 23.92Z" fill="white"/>
+												</svg>
+
+										</div>
+										<div class="inter-content">
+											<div class="dsc">
+												Số lượng tuyển
+											</div>
+											<div class="name font-weight-bold">
+												5 người
+											</div>
+										</div>
+									</div>
+									<div class="item">
+										<div class="icon">
+											<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M28.1204 9.30665C26.987 8.05332 25.0937 7.42665 22.347 7.42665H22.027V7.37332C22.027 5.13332 22.027 2.35999 17.0137 2.35999H14.987C9.97371 2.35999 9.97371 5.14665 9.97371 7.37332V7.43999H9.65371C6.89371 7.43999 5.01371 8.06665 3.88038 9.31999C2.56038 10.7867 2.60038 12.76 2.73371 14.1067L2.74704 14.2L2.85783 15.3633C2.8721 15.513 2.95293 15.6484 3.07869 15.731C3.38568 15.9326 3.97633 16.3155 4.32038 16.5067C4.50704 16.6267 4.70704 16.7333 4.90704 16.84C7.18704 18.0933 9.69371 18.9333 12.2404 19.3467C12.3604 20.6 12.907 22.0667 15.827 22.0667C18.747 22.0667 19.3204 20.6133 19.4137 19.32C22.1337 18.88 24.7604 17.9333 27.1337 16.5467C27.2137 16.5067 27.267 16.4667 27.3337 16.4267C27.8836 16.1159 28.4548 15.7301 28.9707 15.3557C29.0835 15.2739 29.1558 15.1479 29.1712 15.0094L29.2004 14.7467L29.267 14.12C29.2804 14.04 29.2804 13.9733 29.2937 13.88C29.4004 12.5333 29.3737 10.6933 28.1204 9.30665ZM17.4537 18.44C17.4537 19.8533 17.4537 20.0667 15.8137 20.0667C14.1737 20.0667 14.1737 19.8133 14.1737 18.4533V16.7733H17.4537V18.44ZM11.8804 7.42665V7.37332C11.8804 5.10665 11.8804 4.26665 14.987 4.26665H17.0137C20.1204 4.26665 20.1204 5.11999 20.1204 7.37332V7.43999H11.8804V7.42665Z" fill="white"/>
+												<path d="M28.1029 18.1825C28.4559 18.013 28.8611 18.2939 28.8257 18.6839L28.3201 24.2533C28.0401 26.92 26.9468 29.64 21.0801 29.64H10.9201C5.05345 29.64 3.96012 26.92 3.68012 24.2667L3.19941 18.9788C3.16436 18.5934 3.56105 18.3132 3.91317 18.4739C5.37082 19.139 8.49371 20.5169 10.3226 20.9779C10.4873 21.0195 10.6213 21.1371 10.6901 21.2924C11.4819 23.0764 13.2523 24.0267 15.8268 24.0267C18.3758 24.0267 20.1695 23.0399 20.9633 21.2526C21.0323 21.0972 21.1667 20.9795 21.3316 20.9378C23.2712 20.4474 26.584 18.9116 28.1029 18.1825Z" fill="white"/>
+												</svg>
+
+										</div>
+										<div class="inter-content">
+											<div class="dsc">
+												Hình thức làm việc
+
+											</div>
+											<div class="name font-weight-bold">
+												Toàn thời gian
+											</div>
+										</div>
+									</div>
+
+									<div class="item">
+										<div class="icon">
+											<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M16.0003 2.66666C12.507 2.66666 9.66699 5.50666 9.66699 8.99999C9.66699 12.4267 12.347 15.2 15.8403 15.32C15.947 15.3067 16.0537 15.3067 16.1337 15.32C16.1603 15.32 16.1737 15.32 16.2003 15.32C16.2137 15.32 16.2137 15.32 16.227 15.32C19.6403 15.2 22.3203 12.4267 22.3337 8.99999C22.3337 5.50666 19.4937 2.66666 16.0003 2.66666Z" fill="white"/>
+												<path d="M22.7733 18.8667C19.0533 16.3867 12.9866 16.3867 9.23995 18.8667C7.54661 20 6.61328 21.5333 6.61328 23.1733C6.61328 24.8133 7.54661 26.3333 9.22661 27.4533C11.0933 28.7067 13.5466 29.3333 15.9999 29.3333C18.4533 29.3333 20.9066 28.7067 22.7733 27.4533C24.4533 26.32 25.3866 24.8 25.3866 23.1467C25.3733 21.5067 24.4533 19.9867 22.7733 18.8667Z" fill="white"/>
+												</svg>
+
+										</div>
+										<div class="inter-content">
+											<div class="dsc">
+												Giới tính
+											</div>
+											<div class="name font-weight-bold">
+												Nam/Nữ
+											</div>
+										</div>
+									</div>
+									<div class="item">
+										<div class="icon">
+											<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+												<path d="M27.8531 17.3333V18.6666H26.6932C25.7065 18.6666 24.9065 19.4666 24.9065 20.4666V20.8666C24.9065 21.8666 24.1065 22.6666 23.1065 22.6666C22.1198 22.6666 21.3198 21.8666 21.3198 20.8666V20.4666C21.3198 19.4666 20.5065 18.6666 19.5198 18.6666C18.5332 18.6666 17.7332 19.4666 17.7332 20.4666V20.8666C17.7332 21.8666 16.9198 22.6666 15.9332 22.6666C14.9465 22.6666 14.1332 21.8666 14.1332 20.8666V20.4666C14.1332 19.4666 13.3332 18.6666 12.3465 18.6666C11.3598 18.6666 10.5465 19.4666 10.5465 20.4666V20.8666C10.5465 21.8666 9.74648 22.6666 8.75982 22.6666C7.75982 22.6666 6.95982 21.8666 6.95982 20.8666V20.44C6.95982 19.4533 6.17315 18.6533 5.19982 18.64H4.14648V17.3333C4.14648 15.4933 5.53315 13.9333 7.41315 13.48C7.78648 13.3866 8.17315 13.3333 8.58648 13.3333H23.4132C23.8265 13.3333 24.2132 13.3866 24.5865 13.48C26.4665 13.9333 27.8531 15.4933 27.8531 17.3333Z" fill="white"/>
+												<path d="M24.5864 9.56002V11.44C24.1998 11.36 23.8131 11.3334 23.4131 11.3334H8.58642C8.18642 11.3334 7.79975 11.3734 7.41309 11.4534V9.56002C7.41309 7.96002 8.85309 6.66669 10.6398 6.66669H21.3598C23.1464 6.66669 24.5864 7.96002 24.5864 9.56002Z" fill="white"/>
+												<path d="M11.667 4.7333V6.67997H10.6403C10.2937 6.67997 9.97366 6.71997 9.66699 6.79997V4.7333C9.66699 4.26664 10.1203 3.86664 10.667 3.86664C11.2137 3.86664 11.667 4.26664 11.667 4.7333Z" fill="white"/>
+												<path d="M22.333 4.44V6.8C22.0263 6.70667 21.7063 6.66667 21.3597 6.66667H20.333V4.44C20.333 3.89334 20.7863 3.44 21.333 3.44C21.8797 3.44 22.333 3.89334 22.333 4.44Z" fill="white"/>
+												<path d="M17 3.76002V6.66669H15V3.76002C15 3.16002 15.4533 2.66669 16 2.66669C16.5467 2.66669 17 3.16002 17 3.76002Z" fill="white"/>
+												<path d="M29.3337 28.3333C29.3337 28.88 28.8803 29.3333 28.3337 29.3333H3.66699C3.12033 29.3333 2.66699 28.88 2.66699 28.3333C2.66699 27.7867 3.12033 27.3333 3.66699 27.3333H4.14699V20.64H4.96033V20.7333C4.96033 22.52 6.13366 24.1733 7.88032 24.56C9.24032 24.88 10.5337 24.44 11.4137 23.5733C11.9203 23.0667 12.747 23.0533 13.2537 23.56C13.947 24.24 14.8937 24.6667 15.9337 24.6667C16.9737 24.6667 17.9203 24.2533 18.6137 23.56C19.1203 23.0667 19.9337 23.0667 20.4537 23.5733C21.3203 24.44 22.6137 24.88 23.987 24.56C25.7337 24.1733 26.907 22.52 26.907 20.7333V20.6667H27.8537V27.3333H28.3337C28.8803 27.3333 29.3337 27.7867 29.3337 28.3333Z" fill="white"/>
+												</svg>
+
+										</div>
+										<div class="inter-content">
+											<div class="dsc">
+												Độ tuổi
+
+											</div>
+											<div class="name font-weight-bold">
+												20 - 25 tuổi
+											</div>
+										</div>
+									</div>
+									
+								</div>
+							</div>
+
+							<div class="section-ud">
+								<div class="title-recruitment">
+									Ưu đãi dành cho bạn
+								</div>
+								<div class="content">
+									<div class="img">
+										<img src="image/td-01.png" title="">
+									</div>
+									<div class="img">
+										<img src="image/td-02.png" title="">
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
