--- a/chi_tiet_tuyen_dung.html
+++ b/chi_tiet_tuyen_dung.html
@@ -235,19 +235,68 @@
 									</div>
 									<div class="content">
 										<form>
-										    <div class="form-group">
-										        <label for="exampleInputEmail1">Email address</label>
-										        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" />
-										        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-										    </div>
-										    <div class="form-group">
-										        <label for="exampleInputPassword1">Password</label>
-										        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" />
-										    </div>
-										    <div class="form-check">
-										        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-										        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-										    </div>
+											<div class="row">
+												<div class="col-lg-6">
+													<div class="form-group">
+												        <label>
+												        	Họ và tên
+												        </label>
+												        <span>
+												        	<input type="email" class="form-control" placeholder="Nguyen Van A" />
+												        	<img src="image/user.png">
+												        </span>
+												    </div>
+												</div>
+												<div class="col-lg-6">
+													<div class="form-group">
+												        <label>
+												        	Số điện thoại
+												        </label>
+												        <span>
+												        	<input type="email" class="form-control" placeholder="+84" />
+												        	<img src="image/call.png">
+												        </span>
+												    </div>
+												</div>
+												<div class="col-lg-6">
+													<div class="form-group">
+												        <label>
+												        	Email
+												        </label>
+												        <span>
+												        	<input type="email" class="form-control" placeholder="Example@gmail.com" />
+												        	<img src="image/sms.png">
+												        </span>
+												    </div>
+												</div>
+												<div class="col-lg-6">
+													<div class="form-group">
+												        <label>
+												        	Địa chỉ
+												        </label>
+												        <span>
+												        	<input type="email" class="form-control" placeholder="Địa chỉ" />
+												        	<img src="image/location-tick.png">
+												        </span>
+												    </div>
+												</div>
+												<div class="col-lg-12">
+													<div class="form-group form-group-file">
+								                		<input type="file" name="cv" value="" id="cv" class="d-none"/>
+								                		<label class="btn-file" for="cv">
+								                			<span>
+								                				Click để tải CV của bạn
+								                				<img src="image/note-2.png">
+								                			</span>
+								                			<span>
+								                				<img src="image/directbox-receive.png">
+								                				Upload CV
+								                			</span>
+								                		</label>
+								                	</div>
+							                	</div>
+											</div>
+										    
 										    <button type="submit" class="btn btn-primary">Submit</button>
 										</form>
 
