--- a/tuyen_dung.html
+++ b/tuyen_dung.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WORDPRESS HOSTING</title>
+	<title>Tuyển dụng</title>
 
 	 
 	<link href="./lib/bootstrap.css" rel="stylesheet" type="text/css">
@@ -94,7 +94,7 @@
 			<div class="container">
 				<div class="content">
 					<div class="row">
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -135,7 +135,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -176,7 +176,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -217,7 +217,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -258,7 +258,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -299,7 +299,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -340,7 +340,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -381,7 +381,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
@@ -422,7 +422,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-6 col-12">
+						<div class="col-xl-4 col-md-6 col-12">
 							<div class="item">
 								<div class="inter-img">
 									<div class="img">
