--- a/gioi_thieu.html
+++ b/gioi_thieu.html
@@ -47,9 +47,15 @@
 									Thiên thời - Địa lợi - Nhân hòa, Người ứng với thiên thời thì sáng lập cơ nghiệp - Địa lợi thì nắm được bá vương - Nhân hòa thì thành sự nghiệp. Bắt nguồn từ những quan điểm nhân sinh triết lý, coi trọng sự hòa hợp âm dương của con người trong vũ trụ ấy, cái tên Nhân Hòa ra đời, đánh dấu cho sự khởi nghiệp của Chúng tôi.
 								</div>
 								<div class="text">
-									Được thành lập năm 2002 do nhu cầu tất yếu hội nhập của nền kinh tế, hiện tại Nhân Hòa đang cung cấp dịch vụ cho hơn 100.000 khách hàng trong và ngoài nước. Chúng tôi luôn nỗ lực sáng tạo không ngừng nhằm xây dựng công ty thành một tổ chức hùng mạnh, hiện đại và văn hóa với mong muốn mở rộng hợp tác với các đối tác trong và ngoài nước tạo nền tảng cho những bước tiến bền vững.
-									Trải qua 20 năm thành lập và phát triển, Nhân hòa đã được tạo sự tin tưởng, tin cậy trong lòng khách hàng. Với hàng trăm đại lý trên toàn quốc, chúng tôi luôn nỗ lực đem đến sự hài lòng về sản phẩm dịch vụ và giải pháp công nghệ tốt nhất cho tất cả mọi người.
-									Không chỉ gặt hái được những thành công trong hoạt động kinh doanh, với phương châm lấy chữ “Nhân” làm tôn chỉ, tập thể lãnh đạo, nhân viên Nhân Hòa đã xây dựng được một môi trường văn hóa doanh nghiệp lành mạnh. Ngôi nhà Nhân Hòa không chỉ là nơi các thành viên lao động, sáng tạo mà còn là nơi gắn kết, sẻ chia mọi tâm tư, nguyện vọng.
+									<p>
+										Được thành lập năm 2002 do nhu cầu tất yếu hội nhập của nền kinh tế, hiện tại Nhân Hòa đang cung cấp dịch vụ cho hơn 100.000 khách hàng trong và ngoài nước. Chúng tôi luôn nỗ lực sáng tạo không ngừng nhằm xây dựng công ty thành một tổ chức hùng mạnh, hiện đại và văn hóa với mong muốn mở rộng hợp tác với các đối tác trong và ngoài nước tạo nền tảng cho những bước tiến bền vững.
+									</p>
+									<p>
+										Trải qua 20 năm thành lập và phát triển, Nhân hòa đã được tạo sự tin tưởng, tin cậy trong lòng khách hàng. Với hàng trăm đại lý trên toàn quốc, chúng tôi luôn nỗ lực đem đến sự hài lòng về sản phẩm dịch vụ và giải pháp công nghệ tốt nhất cho tất cả mọi người.
+									</p>
+									<p>
+										Không chỉ gặt hái được những thành công trong hoạt động kinh doanh, với phương châm lấy chữ “Nhân” làm tôn chỉ, tập thể lãnh đạo, nhân viên Nhân Hòa đã xây dựng được một môi trường văn hóa doanh nghiệp lành mạnh. Ngôi nhà Nhân Hòa không chỉ là nơi các thành viên lao động, sáng tạo mà còn là nơi gắn kết, sẻ chia mọi tâm tư, nguyện vọng.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -173,17 +179,19 @@
 		<div class="section-box-about-04">
 			<div class="container">
 				<div class="content">
-					<div class="icon">
-						<img src="image/cup.png">
-					</div>		
-					<div class="info">
-						<div class="name">
-							Tự hào đơn vị
-						</div>
-						<div class="dsc">
-							đang cung cấp dịch vụ cho
-						</div>
-					</div>	
+					<span class="text-info">
+						<div class="icon">
+							<img src="image/cup.png">
+						</div>		
+						<div class="info">
+							<div class="name">
+								Tự hào đơn vị
+							</div>
+							<div class="dsc">
+								đang cung cấp dịch vụ cho
+							</div>
+						</div>	
+					</span>
 					<span>
 						<span class="number">
 							100.000+
