--- a/lien-he.html
+++ b/lien-he.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tuyển dụng</title>
+	<title>Liên hệ</title>
 
 	 
 	<link href="./lib/bootstrap.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
 						<div class="col-md-6 col-12">
 							<div class="tab-office">
 								<div class="title-section text-left">
-									Kết nối với Nhân Hoà
+									Liên hệ với chúng tôi
 								</div>
 								<div class="tab-content-office">
 									<ul class="nav nav-tabs" role="tablist">
@@ -97,11 +97,24 @@
 									    			Hotline (Zalo): 0913 800 218
 									    		</p>
 									    	</div>
+									    	<div class="info-office">
+									    		<div class="title">
+									    			Thời gian làm việc
+									    		</div>
+									    		<ul>
+									    			<li>
+									    				Từ thứ Hai đến thứ Bảy
+									    			</li>
+									    			<li>
+									    				Sáng: 8h00 - 12h00, Chiều: 1h30 - 5h30
+									    			</li>
+									    		</ul>
+									    	</div>
 									    </div>
 									    <div class="tab-pane" id="hcm" role="tabpanel" aria-labelledby="hcm-tab">
 									    	<div class="info-office">
 									    		<div class="title">
-									    			Trụ sở Hà Nội
+									    			Trụ sở Hồ Chí Minh
 									    		</div>
 									    		<p class="address">
 									    			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -113,9 +126,8 @@
 														<rect width="20" height="20" fill="white"/>
 														</clipPath>
 														</defs>
-														</svg>
-
-									    			Tầng 4 - Toà nhà 97 - 99 Láng Hạ, Quận Đống Đa, Thành Phố Hà Nội
+													</svg>
+													927/1 CMT8, Phường 7, Quận Tân Bình, Thành phố Hồ Chí Minh
 									    		</p>
 									    		<p>
 									    			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -134,13 +146,26 @@
 
 									    			Hotline (Zalo): 0913 800 218
 									    		</p>
+									    	</div>
+									    	<div class="info-office">
+									    		<div class="title">
+									    			Thời gian làm việc
+									    		</div>
+									    		<ul>
+									    			<li>
+									    				Từ thứ Hai đến thứ Bảy
+									    			</li>
+									    			<li>
+									    				Sáng: 8h00 - 12h00, Chiều: 1h30 - 5h30
+									    			</li>
+									    		</ul>
 									    	</div>
 									    </div>
 
 									    <div class="tab-pane" id="vinh" role="tabpanel" aria-labelledby="vinh-tab">
 									    	<div class="info-office">
 									    		<div class="title">
-									    			Trụ sở Hà Nội
+									    			Trụ sở Vinh - Nghệ An
 									    		</div>
 									    		<p class="address">
 									    			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -154,7 +179,7 @@
 														</defs>
 														</svg>
 
-									    			Tầng 4 - Toà nhà 97 - 99 Láng Hạ, Quận Đống Đa, Thành Phố Hà Nội
+									    			Tầng 2 Tòa nhà Sài Gòn Sky, ngõ 26 Nguyễn Thái Học, phường Đội Cung, TP. Vinh, Nghệ An
 									    		</p>
 									    		<p>
 									    			<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -174,11 +199,267 @@
 									    			Hotline (Zalo): 0913 800 218
 									    		</p>
 									    	</div>
+									    	<div class="info-office">
+									    		<div class="title">
+									    			Thời gian làm việc
+									    		</div>
+									    		<ul>
+									    			<li>
+									    				Từ thứ Hai đến thứ Bảy
+									    			</li>
+									    			<li>
+									    				Sáng: 8h00 - 12h00, Chiều: 1h30 - 5h30
+									    			</li>
+									    		</ul>
+									    	</div>
 									    </div>
 									</div>
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="section-contact-box-02">
+			<div class="container">
+				<div class="content">
+					<div class="title-section text-left color-main">
+						Công ty TNHH Phần mềm Nhân Hòa
+					</div>
+					<div class="item-content">
+						<div class="row">
+							<div class="col-md-4 col-12">
+								<div class="item-contact-time">
+									<div class="title">
+										Liên hệ
+									</div>
+									<ul>
+										<li>
+											Tổng đài liên hệ: 1900 6680
+										</li>
+										<li>
+											Hotline Góp ý: 0911 40 89 66
+										</li>
+										<li>
+											Email: contact@nhanhoa.com
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-4 col-12">
+								<div class="item-contact-time">
+									<div class="title">
+										Thời gian làm việc
+									</div>
+									<ul>
+										<li>
+											Từ thứ Hai đến thứ Bảy
+										</li>
+										<li>
+											Sáng: 8h00 - 12h00, Chiều: 1h30 - 5h30
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item-content">
+						<div class="row">
+							<div class="col-md-4 col-12">
+								<div class="item-off">
+									<div class="title">
+										Hà Nội
+									</div>
+									<div class="title-bp font-weight-bolder color-main">
+										Bộ phận kinh doanh
+									</div>
+									<ul>
+										<li>
+											Điện thoại: (024) 7308 6680 (phím 1, 2, 3)
+										</li>
+										<li>
+											Email: sales@nhanhoa.com
+										</li>
+									</ul>
+									<div class="title-bp font-weight-bolder color-main">
+										Bộ phận kỹ thuật
+									</div>
+									<ul>
+										<li>
+											Điện thoại: (024) 7308 6680 (phím 1, 2, 3)
+										</li>
+										<li>
+											Email: sales@nhanhoa.com
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-4 col-12">
+								<div class="item-off">
+									<div class="title">
+										Hồ Chí Minh
+									</div>
+									<div class="title-bp font-weight-bolder color-main">
+										Bộ phận kinh doanh
+									</div>
+									<ul>
+										<li>
+											Điện thoại: (028) 7308 6680 (phím 1)
+										</li>
+										<li>
+											Email: hcmsales@nhanhoa.com
+										</li>
+									</ul>
+									<div class="title-bp font-weight-bolder color-main">
+										Bộ phận kỹ thuật
+									</div>
+									<ul>
+										<li>
+											Điện thoại: (024) 7308 6680 (phím 2)
+										</li>
+										<li>
+											Email: hcmsupport@nhanhoa.com
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-md-4 col-12">
+								<div class="item-off">
+									<div class="title">
+										Vinh - Nghệ An
+									</div>
+									<div class="title-bp font-weight-bolder color-main">
+										Bộ phận kinh doanh
+									</div>
+									<ul>
+										<li>
+											Điện thoại: (024) 7308 6680 (phím 6)
+										</li>
+										<li>
+											Email: contact@nhanhoa.com
+										</li>
+									</ul>
+									<div class="title-bp font-weight-bolder color-main">
+										Bộ phận kỹ thuật
+									</div>
+									<ul>
+										<li>
+											Điện thoại: (024) 7308 6680 (phím 4)
+										</li>
+										<li>
+											Email: support@nhanhoa.com
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="section-contact-box-03" style="background-image: url(image/banner-form-contact.png);">
+			<div class="container">
+				<div class="content">
+					<div class="title-section text-left text-white">
+						Liên hệ qua Email
+					</div>
+					<p class="text-left text-white">
+						Chọn phòng muốn gửi
+					</p>
+
+					<div class="form-contact">
+						<form>
+							<div class="list-op">
+								<div class="row">
+									<div class="col-md-3 col-6">
+										<label class="checkcontainer">
+									        <input type="radio" checked="checked" name="radio" value="Kỹ thuật" />
+									        <span class="radiobtn">
+									        	Kỹ thuật
+									        </span>
+									    </label>
+									</div>
+									<div class="col-md-3 col-6">
+										<label class="checkcontainer">
+									        <input type="radio"  name="radio" value="Kỹ thuật" />
+									        <span class="radiobtn">
+									        	Kinh doanh HN
+									        </span>
+									    </label>
+									</div>
+									<div class="col-md-3 col-6">
+										<label class="checkcontainer">
+									        <input type="radio" name="radio" value="Kỹ thuật" />
+									        <span class="radiobtn">
+									        	Kế toán HN
+									        </span>
+									    </label>
+									</div>
+									<div class="col-md-3 col-6">
+										<label class="checkcontainer">
+									        <input type="radio" name="radio" value="Kỹ thuật" />
+									        <span class="radiobtn">
+									        	Kinh doanh HCM
+									        </span>
+									    </label>
+									</div>
+									<div class="col-md-3 col-6">
+										<label class="checkcontainer">
+									        <input type="radio" name="radio" value="Kỹ thuật" />
+									        <span class="radiobtn">
+									        	Kế toán HCM
+									        </span>
+									    </label>
+									</div>
+									<div class="col-md-3 col-6">
+										<label class="checkcontainer">
+									        <input type="radio" name="radio" value="Kỹ thuật" />
+									        <span class="radiobtn">
+									        	Web4s
+									        </span>
+									    </label>
+									</div>
+									<div class="col-md-3 col-6">
+										<label class="checkcontainer">
+									        <input type="radio" name="radio" value="Kỹ thuật" />
+									        <span class="radiobtn">
+									        	Ban giám đốc
+									        </span>
+									    </label>
+									</div>
+
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-4 col-12">
+									<div class="form-group">
+								        <input type="text" class="form-control" placeholder="Họ và tên" />
+								    </div>
+								</div>
+								<div class="col-md-4 col-12">
+									<div class="form-group">
+								        <input type="email" class="form-control" placeholder="Email của bạn" />
+								    </div>
+								</div>
+								<div class="col-md-4 col-12">
+									<div class="form-group">
+								        <input type="text" class="form-control" placeholder="Tiêu đề" />
+								    </div>
+								</div>
+								<div class="col-12">
+									<div class="form-group">
+										<textarea name="" class="form-control" placeholder="Nội dung" ></textarea>
+								    </div>
+								</div>
+							</div>
+						    <div class="form-group form-btn text-right mb-0">
+						    	<button type="submit" class="btn btn-main">Gửi tin nhắn</button>
+						    </div>
+						</form>
+
 					</div>
 				</div>
 			</div>
